# neoDTH

./: Dockerfile  docker-compose.yml  env.example  main.py  pyproject.toml
.github/workflows/: ci-cd.yml
app/: _main_.py
app/adapters/: __init__.py
app/adapters/influx_repository/: influx_client.py  metrics_repo.py
app/adapters/mqtt_gateway/: client.py  handler.py
app/adapters/pg_repository/: alert_repo.py  device_repo.py  heart_rate_repo.py  patient_device_repo.py  patient_repo.py  pgsql_client.py  temperature_repo.py
app/adapters/tcp_gateway/: handler.py  server.py
app/api/: bootstrap_router.py  router_registry.py
app/api/routes/: alert.py  device.py  healthcheck.py  patient.py  patient_device.py
app/core/: cors_middleware.py  event_bus.py  lifespan.py  logger.py  settings.py  startup_checker.py
app/domain/alert/: models.py
app/domain/device/: events.py  models.py  repository.py
app/domain/heart_rate/: models.py
app/domain/patient/: events.py  models.py
app/domain/patient_device/: events.py  models.py  repository.py
app/domain/shared/: base_model.py  influx_data_model.py  repository.py
app/domain/sleep/: events.py
app/services/: __init__.py  bootstrap_services.py  device_service.py  heart_rate_processor.py  patient_device_event_handler.py  patient_device_service.py  patient_service.py  sleep_processor.py  temperature_processor.py
app/services/aggregators/: health_combiner.py
docs/: auth_plan.md  data_bus_and_db.md  plan.md  project_summary.md  unimplemented_features.md
tests/: test_device.py  test_patient_device.py
(+7 files in other folders)
